2010-10-06  Nicola Pero  <nicola.pero@meta-innovation.com>

	Merge from apple/trunk branch on FSF servers.
	* cp-tree.def: Added AT_ENCODE_EXPR here instead of to the no
	longer existing gcc/c-common.def.
	
	2005-12-14  Fariborz Jahanian <fjahanian@apple.com>

	Radar 4278774
	* pt.c (tsubst_copy_and_build): Instantiate @endcode(T).
	* parser.c (cp_parser_objc_encode_expression): Build a templatized 
	parse tree for @encode(T).

	2005-12-14  Fariborz Jahanian <fjahanian@apple.com>

	Radar 4278774
	* c-common.def: Add new expression code AT_ENCODE_EXPR.
	
2010-10-06  Eric Botcazou  <ebotcazou@adacore.com>

	PR c++/45908
	* typeck.c (cp_build_addr_expr_1): Add check for incomplete types in
	code folding offsetof-like computations.

2010-10-05  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc++/31125
	* parser.c (cp_parser_objc_class_interface): If no identifier
	follows an @interface token, stop parsing the interface after
	printing an error.
	(cp_parser_objc_class_implementation): If no identifier follows an
	@implementation token, stop parsing the implementation after
	printing an error.

2010-10-05  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc++/23707
	* parser.c (cp_parser_objc_method_keyword_params): If the required
	colon is not found while parsing parameters, stop parsing them.

2010-10-05  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR objc++/31126
	* parser.c (cp_parser_objc_class_ivars): Do not eat the EOF or
	@end after detecting it.  Print an error if @end is found without
	a '}'.
	(cp_parser_objc_method_prototype_list): Do not eat the EOF after
	detecting it.  Fixed reading the next token when continuing
	because of an error in a method signature.  Print an error if EOF
	is found without an '@end'.
	(cp_parser_objc_method_definition_list): Same change.

2010-10-05  Nicola Pero  <nicola.pero@meta-innovation.com>
	
	Merge from apple/trunk branch on FSF servers:
	
	2005-10-17  Fariborz Jahanian <fjahanian@apple.com>

	Radar 4290840